tests/snapshots/spanshot_request@4208188937398274045-2.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_expr: AllocTemporary, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `ref x: T`

ref x @ p: T
// Applying rule `Binding`
x @ &p: &T

// Final bindings:
let x: &T = &p
