tests/snapshots/spanshot_request@4255184052985705209.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_expr: ResetBindingMode, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `[ref mut x]: &mut [T]`

[ref mut x] @ p: &mut [T]
// Applying rule `ConstructorRef`
ref mut x @ &mut (*p).0: &mut T
// Applying rule `Binding`
x @ &mut (*p).0: &mut T

// Final bindings:
let x: &mut T = &mut (*p).0
