tests/snapshots/spanshot_request@4357459077045835668.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `mut ref mut x: T`

mut ref mut x @ p: T
// Applying rule `Binding`
mut x @ &mut p: &mut T

// Final bindings:
let mut x: &mut T = &mut p
