tests/snapshots/spanshot_request@4389022062172810586-2.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `ref x: T`

ref x @ p: T
// Applying rule `Binding`
x @ &p: &T

// Final bindings:
let x: &T = &p
